--- a/src/Mobile/DamaNoJornal/DamaNoJornal.Core/Views/ProfileView.xaml
+++ b/src/Mobile/DamaNoJornal/DamaNoJornal.Core/Views/ProfileView.xaml
@@ -1,101 +1,73 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="DamaNoJornal.Core.Views.ProfileView" 
-             xmlns:views="clr-namespace:DamaNoJornal.Core.Views;assembly=DamaNoJornal.Core"
-			 xmlns:viewModelBase="clr-namespace:DamaNoJornal.Core.ViewModels.Base;assembly=DamaNoJornal.Core"
+             x:Class="DamaNoJornal.Core.Views.ProfileView"   
              xmlns:templates="clr-namespace:DamaNoJornal.Core.Views.Templates;assembly=DamaNoJornal.Core"
+		     xmlns:viewModelBase="clr-namespace:DamaNoJornal.Core.ViewModels.Base;assembly=DamaNoJornal.Core"
+             xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
+             xmlns:animations="clr-namespace:DamaNoJornal.Core.Animations;assembly=DamaNoJornal.Core"
+             xmlns:triggers="clr-namespace:DamaNoJornal.Core.Triggers;assembly=DamaNoJornal.Core"
              xmlns:behaviors="clr-namespace:DamaNoJornal.Core.Behaviors;assembly=DamaNoJornal.Core"
 			 viewModelBase:ViewModelLocator.AutoWireViewModel="true"
-             Title="Encomendas">
+             Title="Perfil">
     <ContentPage.Resources>
         <ResourceDictionary>
-
-            <Style x:Key="LoginButtonStyle" 
-               TargetType="{x:Type Label}">
-                <Setter Property="FontFamily"
-                        Value="{StaticResource MontserratRegular}" />
-                <Setter Property="TextColor"
-                        Value="{StaticResource WhiteColor}" />
-                <Setter Property="HorizontalOptions"
-                        Value="Center" />
-                <Setter Property="VerticalOptions"
-                        Value="Center" />
-            </Style>
             
-            <Style x:Key="MyOrdersLabelStyle" 
-               TargetType="{x:Type Label}">
+            <Style x:Key="HeaderLabelStyle"
+                TargetType="{x:Type Label}">
                 <Setter Property="FontFamily"
-                        Value="{StaticResource MontserratRegular}" />
+                    Value="{StaticResource MontserratRegular}" />
                 <Setter Property="FontSize"
-                        Value="{StaticResource MediumSize}" />
+                    Value="{StaticResource BigSize}" />
+                <Setter Property="TextColor"
+                    Value="{StaticResource GreenColor}" />
                 <Setter Property="HorizontalOptions"
-                        Value="Center" />
-                <Setter Property="VerticalOptions"
-                        Value="Center" />
-                <Setter Property="Margin"
-                        Value="0, 12" />
+                    Value="Center" />
             </Style>
-            
+
         </ResourceDictionary>
     </ContentPage.Resources>
-    <Grid    
-        Padding="0"     
-        ColumnSpacing="0"   
-        RowSpacing="0"
-        BackgroundColor="{StaticResource BackgroundColor}">
+    
+    <Grid  
+        ColumnSpacing="0"
+        RowSpacing="0">
         <Grid.RowDefinitions>
-            <RowDefinition Height="60" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="80" />
         </Grid.RowDefinitions>
+        <!-- CAMPAIGNS -->
+        <Grid  
+            Grid.Row="1">
+            <StackLayout>
+                <Image Source="{Binding PictureUri}">
+                </Image>
+                <Label 
+                    Text="{Binding Name}"
+                    Style="{StaticResource HeaderLabelStyle}"/>
+            </StackLayout>
+        </Grid>
         <!-- LOG OUT BUTTON -->
-        <!--<Button         
-            Grid.Row="0"
-            Text="LOG OUT" 
+        <Button         
+            Grid.Row="2"
+            Text="SAIR" 
             TextColor="{StaticResource BlackColor}"
             BackgroundColor="{StaticResource GrayColor}"
-            Command="{Binding LogoutCommand}" />-->
-        <!-- ORDERS -->
-        <Grid
-            Grid.Row="1">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <Label 
-                Grid.Row="0"
-                Text="AS MINHAS ENCOMENDAS"
-                Style="{StaticResource MyOrdersLabelStyle}"/>
-            <Grid 
-                Grid.Row="1">
-                <Grid 
-                    IsVisible="{Binding IsBusy, Converter={StaticResource InverseBoolConverter}}">
-                    <Label 
-                        Text="NÃO EXISTEM ENCOMENDAS"      
-                        IsVisible="{Binding Orders.Count, Converter={StaticResource InverseCountToBoolConverter}}"
-                        HorizontalOptions="Center"
-                        VerticalOptions="Center"/>
-                </Grid>
-                <ListView 
-                    ItemsSource="{Binding Orders}"
-                    HasUnevenRows="True"
-                    SeparatorVisibility="None"
-                    CachingStrategy="RecycleElement">
-                    <ListView.Behaviors>
-                        <behaviors:EventToCommandBehavior           
-                            EventName="ItemTapped"
-                            Command="{Binding OrderDetailCommand}"
-                            EventArgsConverter="{StaticResource ItemTappedEventArgsConverter}" />
-                    </ListView.Behaviors>
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <ViewCell>
-                                <templates:OrderTemplate />
-                            </ViewCell>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </Grid>
-        </Grid>
+            Command="{Binding LogoutCommand}" />
+        <!-- INDICATOR -->
+        <ActivityIndicator
+            Grid.Row="0"
+            Color="{StaticResource LightGreenColor}"
+            IsRunning="{Binding IsBusy}"  
+            IsVisible="{Binding IsBusy}"
+            VerticalOptions="Center"
+            HorizontalOptions="Center">
+            <ActivityIndicator.WidthRequest>
+                <OnPlatform x:TypeArguments="x:Double">
+                    <On Platform="iOS, Android" Value="100" />
+                    <On Platform="UWP, WinRT, WinPhone" Value="400" />
+                </OnPlatform>
+            </ActivityIndicator.WidthRequest>
+        </ActivityIndicator>
     </Grid>
 </ContentPage>
