--- a/src/Mobile/DamaNoJornal/DamaNoJornal.Core/Views/LoginView.xaml
+++ b/src/Mobile/DamaNoJornal/DamaNoJornal.Core/Views/LoginView.xaml
@@ -10,7 +10,7 @@
 			 viewModelBase:ViewModelLocator.AutoWireViewModel="true">
     <ContentPage.Title>
         <OnPlatform x:TypeArguments="x:String">
-            <On Platform="iOS, UWP, WinRT, WinPhone" Value="eShop on Containers" />
+            <On Platform="iOS, UWP, WinRT, WinPhone" Value="Dama no Jornal App" />
         </OnPlatform>
     </ContentPage.Title>
     <ContentPage.Resources>
