--- a/src/Web/DamaWeb/Pages/Shared/_CookieConsentPartial.cshtml
+++ b/src/Web/DamaWeb/Pages/Shared/_CookieConsentPartial.cshtml
@@ -8,40 +8,30 @@
 
 @if (showBanner)
 {
-    <nav id="cookieConsent" class="navbar fixed-bottom navbar-light bg-light " role="alert">
-        <span class="navbar-brand mb-0"><i class="fas fa-info-circle"></i></span>
-        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#cookieContent">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="cookieContent">
-            <p class="navbar-text">
-                Use this space to summarize your privacy and cookie use policy.
-            </p>
-            <form class="form-inline">
-                <a asp-page="/Privacy" class="btn btn-info">Learn More</a>
-                <button type="button" class="btn btn-default" data-cookie-string="@cookieString">Accept</button>
-            </form>
-            @*<ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    
-                </li>
-
-                <li class="nav-item">
-                    
-                </li>
-            </ul>
-
-            <span class="d-inline-flex">
-
-
-            </span>*@
+    <nav id="cookieConsent" class="navbar navbar-expand-md navbar-light bg-light fixed-bottom" role="alert">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#cookieConsent" aria-controls="cookieConsent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <span class="navbar-brand"><span class="fas fa-info-circle" aria-hidden="true"></span></span>
+            </div>
+            <div class="collapse navbar-collapse">
+                <p class="navbar-text small">
+                    Para lhe podermos proporcionar os nossos serviços e a melhor experiência, a Damanojornal utiliza cookies neste site. Ao continuar no site está a consentir a sua utilização.
+                </p>
+                <div class="ml-auto">
+                    <a href="https://cookiesandyou.com/" target="_blank" class="btn btn-info navbar-btn btn-sm">Saber mais</a>
+                    <button type="button" class="btn btn-secondary navbar-btn btn-sm" data-cookie-string="@cookieString">Aceitar</button>
+                </div>
+            </div>
         </div>
     </nav>
     <script>
         (function () {
             document.querySelector("#cookieConsent button[data-cookie-string]").addEventListener("click", function (el) {
                 document.cookie = el.target.dataset.cookieString;
-                document.querySelector("#cookieConsent").classList.add("hidden");
+                document.querySelector("#cookieConsent").setAttribute("hidden", "");
             }, false);
         })();
     </script>
