--- a/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
+++ b/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
@@ -100,7 +100,7 @@
         </div>
     </div>
 
-    @*<partial name="_CookieConsentPartial" />*@
+    <partial name="_CookieConsentPartial" />
 
     <div class="container body-content">
         @RenderBody()
