--- a/src/Web/Backoffice/Pages/Orders/Details.cshtml
+++ b/src/Web/Backoffice/Pages/Orders/Details.cshtml
@@ -153,5 +153,21 @@
     </div>
 </div>
 <div>
+    <h4>Gerar Fatura</h4>
+    <div class="row">
+        <div class="col-md-4">
+            <form method="post" asp-page-handler="RegisterInvoice">
+                <input type="hidden" asp-for="OrderModel.Id" />
+                <div class="form-group">
+                    <p>Dados da fatura</p>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Gerar Fatura" class="btn btn-default" />
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<div>
     <a asp-page="./Index">Voltar para a lista</a>
 </div>
