--- a/src/Web/Backoffice/Pages/Orders/Details.cshtml
+++ b/src/Web/Backoffice/Pages/Orders/Details.cshtml
@@ -86,6 +86,12 @@
         <dd>
             @Html.DisplayFor(model => model.OrderModel.OrderState)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.OrderModel.SalesInvoiceNumber)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.OrderModel.SalesInvoiceNumber)
+        </dd>
     </dl>
     <h4>Produtos</h4>
     <table class="table">
@@ -146,22 +152,23 @@
                     <span asp-validation-for="OrderModel.OrderState" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Atualizar" class="btn btn-default" />
+                    <div class="row">
+                        <div class="col-md-6"><input type="submit" value="Atualizar" class="btn btn-default" /></div>
+                        <div class="col-md-6">
+                            @if (string.IsNullOrEmpty(Model.OrderModel.SalesInvoiceNumber))
+                            {
+                                <input type="submit" value="Criar Fatura" class="btn btn-success" asp-page-handler="RegisterInvoice" />
+                            }
+                            else
+                            {
+                                <input type="button" class="btn btn-info" value="Fatura já criada!" disabled />
+                            }
+                        </div>
+                    </div>
+                    
+                   
                 </div>
-            </form>
-        </div>
-    </div>
-</div>
-<div>
-    <h4>Gerar Fatura</h4>
-    <div class="row">
-        <div class="col-md-4">
-            <form method="post" asp-page-handler="RegisterInvoice">
-                <input type="hidden" asp-for="OrderModel.Id" />                
-                <div class="form-group">
-                    <input type="submit" value="Gerar Fatura" class="btn btn-default" />
-                </div>
-            </form>
+            </form>           
         </div>
     </div>
 </div>
