--- a/src/Web/DamaWeb/Pages/Basket/Checkout.cshtml
+++ b/src/Web/DamaWeb/Pages/Basket/Checkout.cshtml
@@ -123,7 +123,7 @@
                             <strong>Usar a mesma morada na fatura</strong>
                         </label>
                     </div>
-                    <div id="invoice-address-controls" class="@( (Model.UserAddress.UseSameAsShipping && (Model.UserAddress.UseUserAddress == 1 || Model.UserAddress.UseUserAddress == 0)) || Model.UserAddress.UseUserAddress == 2 ? "d-none":"d-block")">
+                    <div id="invoice-address-controls" class="@( (Model.UserAddress.UseSameAsShipping && (Model.UserAddress.UseUserAddress == 1 || Model.UserAddress.UseUserAddress == 0)) ? "d-none":"d-block")">
                         <div class="form-group">
                             <label asp-for="UserAddress.InvoiceAddressStreet"></label>
                             <input class="form-control" asp-for="UserAddress.InvoiceAddressStreet">
@@ -217,6 +217,12 @@
     <script>
         $(document).ready(function () {
 
+            if($('input[type=radio][name="UserAddress.UseUserAddress"][checked]').val() == '2')
+            {
+                 $('#shipping-cost').removeClass('d-flex').addClass('d-none');
+                 $('#basket-total').text(toNumber(@Model.BasketModel.SubTotal().ToString().Replace(',', '.')));
+            }
+
             $('input[type=radio][name="UserAddress.UseUserAddress"]').click(function () {
                 if (this.value == '1') {
                     $('#shipping-cost').removeClass('d-none').addClass('d-flex');
@@ -252,6 +258,8 @@
                     $('#invoice-address-controls').removeClass('d-none').addClass('d-block');
                 }
             });
+
+            
         });
     </script>
 }
