--- a/src/Web/Backoffice/Pages/Products/Edit.cshtml
+++ b/src/Web/Backoffice/Pages/Products/Edit.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="ProductModel.Description" class="control-label"></label>
-                <input asp-for="ProductModel.Description" class="form-control" />
+                <textarea asp-for="ProductModel.Description" class="form-control" rows='5'></textarea>
                 <span asp-validation-for="ProductModel.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
