--- a/src/Web/DamaWeb/Pages/Product/_productDetail.cshtml
+++ b/src/Web/DamaWeb/Pages/Product/_productDetail.cshtml
@@ -15,7 +15,7 @@
         <img width="180" src="~/images/coração-rosa.png" />
     </div>
 
-    <p class="dama-product-description mb-md-4">@Model.ProductDescription</p>
+    <p class="dama-product-description mb-md-4">@Html.Raw(Model.ProductDescription)</p>
     <small>Tempo de entrega entre @Model.DeliveryTimeMin a @Model.DeliveryTimeMax @(DamaWeb.Extensions.EnumHelper<ApplicationCore.Entities.DeliveryTimeUnitType>.GetDisplayValue(Model.DeliveryTimeUnit))</small>
 
     @for (int i = 0; i < Model.Attributes.Count; i++)
